Fix collapse color.

--- a/static/sass/pybossa/_navbar.scss
+++ b/static/sass/pybossa/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-toggle {
-    color: $white;
+    color: $brand-primary;
     border: 0px;
     background: none;
     background-color: transparent;
